--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 <div class="form-group col-md-6 col-lg-6">
                     <label for="delay">
                         Rate of Asymptomatics
-                        <i class="fa fa-info-circle" data-toggle="tooltip" title="Pior knowledge of rate of asymptomatics"></i>
+                        <i class="fa fa-info-circle" data-toggle="tooltip" title="Pior knowledge of rate of asymptomatics, should be values within [0,1]"></i>
                     </label>
                     <input class="form-control" type="number" value="0" min="0" name="alpha" id="alpha">
                 </div>
