--- a/index.html
+++ b/index.html
@@ -324,6 +324,8 @@
                 t1_date: "required",
                 r1_date: "required",
                 d1_date: "required",
+                U_d10:"required"
+                L_d10:"required",
                 delay: {
                     "required": true,
                     "digits": true,
@@ -338,6 +340,8 @@
                 t1_date: "The tested date cannot be empty",
                 r1_date: "The confirmed date cannot be empty",
                 d1_date: "The deaths date cannot be empty",
+                U_d10:"The upper bound cannot be empty"
+                L_d10:"The lower bound cannot be empty"       
                 delay: {
                     "required": "The delay cannot be empry",
                     "digits": "The delay must be an integer",
