--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 <div class="form-group col-md-6 col-lg-6">
                     <label for="delay">
                         Rate of Asymptomatics
-                        <i class="fa fa-info-circle" data-toggle="tooltip" title="Pior knowledge of rate of asymptomatics, should be values within [0,1]"></i>
+                        <i class="fa fa-info-circle" data-toggle="tooltip" title="Pior knowledge of rate of asymptomatics"></i>
                     </label>
                     <input class="form-control" type="number" value="0" min="0" name="alpha" id="alpha">
                 </div>
@@ -324,8 +324,6 @@
                 t1_date: "required",
                 r1_date: "required",
                 d1_date: "required",
-                U_d10:"required"
-                L_d10:"required",
                 delay: {
                     "required": true,
                     "digits": true,
@@ -340,8 +338,6 @@
                 t1_date: "The tested date cannot be empty",
                 r1_date: "The confirmed date cannot be empty",
                 d1_date: "The deaths date cannot be empty",
-                U_d10:"The upper bound cannot be empty"
-                L_d10:"The lower bound cannot be empty"       
                 delay: {
                     "required": "The delay cannot be empry",
                     "digits": "The delay must be an integer",
