--- a/index.html
+++ b/index.html
@@ -136,14 +136,14 @@
                 <div class="form-group col-md-6 col-lg-6">
                     <label for="L_d10">
                         Lower bound of NPV
-                        <i class="fa fa-info-circle" data-toggle="tooltip" title="Lower bound of Negative Predictive Value, between 0 to 1"></i>
+                        <i class="fa fa-info-circle" data-toggle="tooltip" title="Lower bound of Negative Predictive Value, between 0 and 1"></i>
                     </label>
                     <input class="form-control" type="number" value="0.6" id="L_d10">
                 </div>
                 <div class="form-group col-md-6 col-lg-6">
                     <label for="U_d10">
                         Upper bound of NPV
-                        <i class="fa fa-info-circle" data-toggle="tooltip" title="Upper bound of Negative Predictive Value, between 0 to 1"></i>
+                        <i class="fa fa-info-circle" data-toggle="tooltip" title="Upper bound of Negative Predictive Value, between 0 and 1"></i>
                     </label>
                     <input class="form-control" type="number" value="0.9" id="U_d10">
                 </div>
@@ -152,7 +152,7 @@
                 <div class="form-group col-md-6 col-lg-6">
                     <label for="delay">
                         Rate of Asymptomatics
-                        <i class="fa fa-info-circle" data-toggle="tooltip" title="Pior knowledge of rate of asymptomatics, between 0 to 1"></i>
+                        <i class="fa fa-info-circle" data-toggle="tooltip" title="Pior knowledge of rate of asymptomatics, between 0 and 1"></i>
                     </label>
                     <input class="form-control" type="number" value="0" min="0" name="alpha" id="alpha">
                 </div>
